linuxmuster-linbo (2.3.23-0) babo62; urgency=low

  * 64bit kernel: added dell xps touchscreen drivers.
  * lmn7:
    - machine account password fix.
    - changed LINBODIR to /srv/linbo
  * linbo_cmd: efi network boot fixes.
  * renamed /etc/default/linuxmuster-linbo to linbo-multicast.
  * moved common/var/linbo to common/linbo in source tree.
  * new lmn7 pkg for common files linuxmuster-linbo-common7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 31 Mar 2017 14:46:42 +0000

linuxmuster-linbo (2.3.22-0) babo62; urgency=low

  * added wacom touchpad drivers.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 17 Feb 2017 11:32:57 +0000

linuxmuster-linbo (2.3.21-0) babo62; urgency=low

  * kernel 4.9.10.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 16 Feb 2017 08:48:01 +0000

linuxmuster-linbo (2.3.20-1) babo62; urgency=low

  * linbo_cmd: nvme0n1 disknr fix.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 14 Feb 2017 11:53:18 +0000

linuxmuster-linbo (2.3.20-0) babo62; urgency=low

  * linbo_cmd: experimental support for nvme0n1 disks.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 14 Feb 2017 09:39:47 +0000

linuxmuster-linbo (2.3.19-0) babo62; urgency=low

  * lmn7:
    - added more functions to helperfunctions.sh.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 13 Feb 2017 20:05:38 +0000

linuxmuster-linbo (2.3.18-0) babo62; urgency=low

  * lmn7:
    - added isinteger() to helperfunctions.sh.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 04 Feb 2017 19:13:12 +0000

linuxmuster-linbo (2.3.17-0) babo62; urgency=low

  * lmn7:
    - update-linbofs.sh: removed setting of linbo account password.
    - updated grub.cfg template for forced netboot.
    - moved linbo setup script to linuxmuster-base7 package.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 04 Feb 2017 12:54:43 +0000

linuxmuster-linbo (2.3.16-0) babo62; urgency=low

  * linbo_cmd, set_efibootorder: improved recognition of efi network devices.