@@ -1,6 +1,6 @@
 # initramfs.conf
 # thomas@linuxmuster.net
-# 20170331
+# 20170508
 
 # busybox
 dir /bin 755 0 0
@@ -64,6 +64,9 @@ file /lib/libz.so.1 /lib/x86_64-linux-gnu/libz.so.1 755 0 0
 file /lib/terminfo/l/linux /lib/terminfo/l/linux 755 0 0
 file /lib/terminfo/x/xterm /lib/terminfo/x/xterm 755 0 0
 file /usr/lib/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/libstdc++.so.6 755 0 0
+#file /usr/lib/libicui18n.so.55 /usr/lib/x86_64-linux-gnu/libicui18n.so.55 755 0 0
+#file /usr/lib/libicuuc.so.55 /usr/lib/x86_64-linux-gnu/libicuuc.so.55 755 0 0
+#file /usr/lib/libicudata.so.55 /usr/lib/x86_64-linux-gnu/libicudata.so.55 755 0 0
 
 # linbo_gui64 & Dependencies
 dir /icons 755 0 0
