@@ -1,1 +1,1 @@
-LINBO 2.3.23-0
+LINBO 2.3.24-0
